--- a/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/admin_status/index.htm
@@ -54,7 +54,7 @@
 			connmax    = conn_max,
 			conncount  = conn_count,
 			wifinets   = stat.wifi_networks(),
-			cpu_free   = tonumber(luci.sys.exec("echo `top -n 1 | grep CPU | grep -v grep | head -n 1 | awk '{print $8}' | sed 's/\\(.*\\)\\(.\\)$/\\1/'`")),
+			cpu_free   = tonumber(luci.sys.exec("top -n1 | grep -m1 -i 'cpu' | awk '{print $8}' | grep -Eo '[0-9.]+'")) or 0,
 		}
 
 		if wan then
@@ -326,11 +326,8 @@
 					info.loadavg[2] / 65535.0
 				);
 				
-			if (e = document.getElementById('cpu_free'))
-				e.innerHTML = progressbar(
-					info.cpu_free + "%",
-					100 + "%"
-				);
+			if (e = document.getElementById('cpuused'))
+				e.innerHTML = 100 - info.cpu_free + " %";
 
 			if (e = document.getElementById('memtotal'))
 				e.innerHTML = progressbar(
@@ -386,37 +383,21 @@
 		<div class="tr"><div class="td left" width="33%"><%:Local Time%></div><div class="td left" id="localtime">-</div></div>
 		<div class="tr"><div class="td left" width="33%"><%:Uptime%></div><div class="td left" id="uptime">-</div></div>
 		<div class="tr"><div class="td left" width="33%"><%:Load Average%></div><div class="td left" id="loadavg">-</div></div>
+		<div class="tr"><div class="td left" width="33%"><%:CPU Used%></div><div class="td left" id="cpuused">-</div></div>
 	</div>
 </div>
 
 <div class="cbi-section">
-	<h3><%:CPU%></h3>
+	<h3><%:Total Available%></h3>
 
 	<div class="table" width="100%">
-		<div class="tr"><div class="td left" width="33%"><%:Total Available%></div><div class="td left" id="cpu_free">-</div></div>
+		<!-- <div class="tr"><div class="td left" width="33%">CPU</div><div class="td left" id="cpu_free">-</div></div> -->
+		<div class="tr"><div class="td left" width="33%"><%:Memory%></div><div class="td left" id="memtotal">-</div></div>
+		<% if swapinfo.total > 0 then %>
+			<div class="tr"><div class="td left" width="33%"><%:Swap%></div><div class="td left" id="swaptotal">-</div></div>
+		<% end %>
 	</div>
 </div>
-
-<div class="cbi-section">
-	<h3><%:Memory%></h3>
-
-	<div class="table" width="100%">
-		<div class="tr"><div class="td left" width="33%"><%:Total Available%></div><div class="td left" id="memtotal">-</div></div>
-		<div class="tr"><div class="td left" width="33%"><%:Free%></div><div class="td left" id="memfree">-</div></div>
-		<div class="tr"><div class="td left" width="33%"><%:Buffered%></div><div class="td left" id="membuff">-</div></div>
-	</div>
-</div>
-
-<% if swapinfo.total > 0 then %>
-<div class="cbi-section">
-	<h3><%:Swap%></h3>
-
-	<div class="table" width="100%">
-		<div class="tr"><div class="td left" width="33%"><%:Total Available%></div><div class="td left" id="swaptotal">-</div></div>
-		<div class="tr"><div class="td left" width="33%"><%:Free%></div><div class="td left" id="swapfree">-</div></div>
-	</div>
-</div>
-<% end %>
 
 <div class="cbi-section">
 	<h3><%:Network%></h3>
