luci-mod-admin-full: packages: optimize

--- a/modules/luci-mod-admin-full/luasrc/view/admin_system/packages.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/admin_system/packages.htm
@@ -82,7 +82,6 @@ end
 					<% else %>
 						<%:No package lists available%>
 					<% end %>
-					<input type="submit" name="update" href="#" class="cbi-button cbi-button-apply" style="margin-left:3em" value="<%:Update lists%>" />
 				</div>
 				<% end %>
 
@@ -98,7 +97,7 @@ end
 
 			<div class="cbi-section-node">
 				<input type="hidden" name="display" value="<%=pcdata(display)%>" />
-
+				
 				<div class="cbi-value">
 					<label class="cbi-value-title"><%:Download and install package%>:</label>
 					<div class="cbi-value-field">
@@ -112,6 +111,13 @@ end
 					<div class="cbi-value-field">
 						<span><input type="text" name="query" size="20" value="<%=pcdata(query)%>" /></span>
 						<input type="submit" class="cbi-button cbi-button-action" name="search" value="<%:Find package%>" />
+					</div>
+				</div>
+				
+				<div class="cbi-value">
+					<label class="cbi-value-title"></label>
+					<div class="cbi-value-field">
+						<input type="submit" name="update" href="#" class="cbi-button cbi-button-apply" value="<%:Update lists%>" />
 					</div>
 				</div>
 			</div>
